Mount local maven repo (~/.m2) to docker nodes

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -3,3 +3,4 @@ services:
   control:
     volumes:
       - ${JEPSEN_ROOT}:/jepsen # Mounts $JEPSEN_ROOT on host to /jepsen control container
+      - ${HOME}/.m2:/root/.m2 # Mounts local maven repo
